--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -334,6 +334,9 @@ body > nav > div.navbar-header > button {
 .region-sidebar-second {
   margin-top: 55px;
   margin-bottom: 55px;
+  nav h2 {
+    font-size: 1.5em;
+  }
   nav a {
     color: $gray;
     display: block;
@@ -358,6 +361,7 @@ body > nav > div.navbar-header > button {
   nav li a.is-active {
     color: $brand-primary;
     border-color: $brand-primary;
+    font-weight: bold;
   }
   nav li span {
     font-weight: bold;
